tests/examples/good/garbage_collector/good506.lat
int main() {
    (new int[10])[4] = 42;
    return 0;
}