tests/examples/bad/bad001.lat
int main() {
    new int;
    new void;
}